Upgrade to Java 18 to access preview features