@@ -6,6 +6,7 @@ val libs = the<LibrariesForLibs>()
 plugins {
     java
     `ivy-publish`
+    eclipse
     jacoco
     id("com.github.ben-manes.versions")
 }
@@ -23,16 +24,25 @@ dependencies {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_18
+    targetCompatibility = JavaVersion.VERSION_18
 }
 
 tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
+    options.compilerArgs.add("--enable-preview")
+}
+
+eclipse.jdt.file {
+    withProperties {
+        setProperty("org.eclipse.jdt.core.compiler.problem.enablePreviewFeatures", "enabled")
+        setProperty("org.eclipse.jdt.core.compiler.problem.reportPreviewFeatures", "ignore")
+    }
 }
 
 tasks.named<Test>("test") {
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
 }
 
 jacoco {
